# arrowflow

./: .gitignore  README.md  pyproject.toml
arrowflow/: __init__.py  arrowflow.py  benchmark.py  config.py
experiments/: exp_ablation.py  exp_gene_expression.py  exp_glasgow_elections.py  exp_imdb_scaling.py  exp_imdb_sentiment.py  exp_knn_vs_arrowflow.py  exp_missing_features.py  exp_mnist_pca.py  exp_noise_robustness.py  exp_privacy_rank.py  exp_sample_efficiency.py  exp_sushi_gridsearch.py  exp_sushi_ordinal.py  exp_uci_tabular.py  plot_results.py
experiments/results/: gene_expression_20260404_234114.csv  gene_expression_20260404_235619.csv  missing_features_20260404_023302.csv  mnist_pca_20260405_003828.csv  noise_robustness_20260404_002907.csv  privacy_rank_20260404_020304.csv  results_20260403_181502.csv  results_20260403_201827.csv  sample_efficiency_20260404_015126.csv  sushi_gridsearch_20260404_091014.csv  sushi_ordinal_20260404_023029.csv
manuscript/: manuscript_ArrowFlow_arxiv.tex  references_arrowflow.bib
tests/: test_arrowflow.py
