[tool.poetry]
name = "arrowflow"
version = "0.1.0"
description = "ArrowFlow: Hierarchical Machine Learning in the Space of Permutations"
authors = ["Ozgur Yilmaz <ozguryilmaz@atu.edu.tr>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.12"
scikit-learn = "^1.4"
torch = "^2.2"
torchvision = "^0.17"
matplotlib = "^3.8"
seaborn = "^0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
